alignment fixes

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -147,10 +147,6 @@ h2 {
 
 }
 
-main {
-  height:896px;
-}
-
 #main #about {
   width:  66px;
   height: 20px;
@@ -284,7 +280,7 @@ h3 {
   margin-left: 14px;
   padding-top: 10px;
   height: 225px;
-  width: 404px;
+  width: 392px;
   
 }
 .sign, .about{
@@ -307,6 +303,6 @@ h3 {
   margin: 6px 5px 5px 5px;
    background-color: #000;
    width: 404px;
-   height:300px;
+   height:226px;
   }
 
